--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "dotenv": "^16.0.0",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "react": "^18.0.0",
     "react-confetti": "^6.0.1",
     "react-dom": "^18.0.0",
